test possible fix for img alteration on mobile

--- a/portfolio-v2/src/App.css
+++ b/portfolio-v2/src/App.css
@@ -274,7 +274,8 @@ body {
 .card-img-container {
   display: flex;
   justify-content: center;
-  margin: 8% 0% 8% 0%;
+  border: 1px solid red;
+  margin: 8px 0px 8px 0px;
 }
 
 .card-img {
